apps/media/apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: "http"
      protocol: TCP
      targetPort: 8989
      port: 80
